--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ keras==2.1.5
 scikit-image==0.14.5
 scipy==1.2.2
 simpleitk==1.2.3
-git+git://https://github.com/giesekow/deepvesselnet.git
+git+https://github.com/giesekow/deepvesselnet.git
